--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h1>Айлн, ты самая красивая! ❤️</h1>
     <button class="btn" onclick="toggleMusic()">🎵 Включить/Выключить музыку</button>
     <audio id="music" loop>
-        <source src="https://dl.dropboxusercontent.com/scl/fi/your_audio_file.mp3" type="audio/mpeg">
+        <source src="https://github.com/velishka/Neuxodimp3/blob/main/%D0%A2%D0%B1%D0%B8%D0%BB%D0%B8%20%D0%A2%D0%B5%D0%BF%D0%BB%D1%8B%D0%B8%CC%86%20-%20%D0%9D%D0%B5%20%D1%83%D1%85%D0%BE%D0%B4%D0%B8.mp4" type="audio/mpeg">
         Ваш браузер не поддерживает аудио.
     </audio>
 </div>
